# kaspersky_task

./: .gitignore  README.md  pyproject.toml  sample.txt
app/: main.py
app/api/routes/: report.py
app/application/services/: report_export_service.py
app/core/: settings.py
app/domain/models/: report_statistics.py
app/domain/services/: text_statistics.py
app/infrastructure/excel/: xlsx_report_writer.py
app/infrastructure/morphology/: russian_lemmatizer.py
tests/: test_text_statistics.py
